--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,17 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <serenity.version>1.8.3</serenity.version>
-    <serenity.cucumber.version>1.6.6</serenity.cucumber.version>
     <webdriver.driver>firefox</webdriver.driver>
     <gson.version>2.8.5</gson.version>
+    <serenity.maven.version>1.9.0-rc.3</serenity.maven.version>
+    <tags></tags>
+    <parallel.tests>1</parallel.tests>
+    <webdriver.driver></webdriver.driver>
+    <execEnv></execEnv>
+    <serenity.version>2.0.81</serenity.version>
+    <serenity.maven.version>2.0.81</serenity.maven.version>
+    <serenity.cucumber.version>1.9.39</serenity.cucumber.version>
+    <serenity-junit-version>2.0.81</serenity-junit-version>
   </properties>
 
   <repositories>
